# launchsampler

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHI_ANALYSIS.md  AUDIO_DATA.md  AUDIO_MANAGER.md  CLAUDE.md  DEVICES_ARCHITECTURE.md  EDITING_EVENTS_ARCHITECTURE.md  EDIT_COMMAND_RESTRUCTURE_PROPOSAL.md  IMPLEMENTATION_PLAN.md  MODELS.md  MODEL_SUMMARY.md  PROGRESS.md  README.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TUI_ARCHITECTURE_REVIEW.md  UNIFIED_TUI_IMPLEMENTATION_PLAN.md  api_nav.yml  demo_config_service.py  demo_model_cli_builder.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  test_config_error.py  test_models.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  test.yml
DOCUMENTATION/: index.html
MODEL_CLI_BUILDER/: index.html
api/audio/: index.html
api/audio/data/: index.html
api/audio/device/: index.html
api/audio/loader/: index.html
api/audio/mixer/: index.html
api/colors/: index.html
api/core/: index.html
api/core/player/: index.html
api/core/sampler_engine/: index.html
api/core/state_machine/: index.html
api/devices/: index.html
api/devices/config/: index.html
api/devices/controller/: index.html
api/devices/device/: index.html
api/devices/input/: index.html
api/devices/midi-controller/: index.html
api/devices/protocols/: index.html
api/devices/registry/: index.html
api/devices/schema/: index.html
api/exceptions/: index.html
api/exceptions/audio/: index.html
api/exceptions/base/: index.html
api/exceptions/config/: index.html
api/exceptions/handlers/: index.html
api/led_ui/: index.html
api/led_ui/app/: index.html
api/midi/: index.html
api/midi/base_manager/: index.html
api/midi/input_manager/: index.html
api/midi/manager/: index.html
api/midi/output_manager/: index.html
api/model_manager/: index.html
api/model_manager/observer/: index.html
api/model_manager/persistence/: index.html
api/model_manager/protocols/: index.html
api/model_manager/service/: index.html
api/models/: index.html
api/models/color/: index.html
api/models/config/: index.html
api/models/enums/: index.html
api/models/launchpad/: index.html
api/models/pad/: index.html
api/models/sample/: index.html
api/models/set/: index.html
api/orchestration/: index.html
api/orchestration/orchestrator/: index.html
api/protocols/: index.html
api/protocols/events/: index.html
api/protocols/observers/: index.html
api/services/: index.html
api/services/editor_service/: index.html
api/services/set_manager_service/: index.html
api/tui/: index.html
api/tui/app/: index.html
api/tui/decorators/: index.html
api/ui_shared/: index.html
api/ui_shared/adapter/: index.html
api/ui_shared/colors/: index.html
api/utils/: index.html
api/utils/audio/: index.html
api/utils/error_handler/: index.html
api/utils/observer_manager/: index.html
api/utils/paths/: index.html
architecture/overview/: index.html
badges/: coverage.json
changelog/: index.html
cli-reference/: index.html
docs/: DOCUMENTATION.md  MODEL_CLI_BUILDER.md  README.md  api_nav.yml  asmu_migration_analysis.md  changelog.md  cli-reference.md  index.md  license.md  troubleshooting.md
docs/api/audio/: data.md  device.md  index.md  loader.md  mixer.md
docs/api/colors/: index.md
docs/api/core/: index.md  player.md  sampler_engine.md  state_machine.md
docs/api/devices/: config.md  controller.md  device.md  index.md  input.md  midi-controller.md  protocols.md  registry.md  schema.md
docs/api/exceptions/: audio.md  base.md  config.md  handlers.md  index.md
docs/api/led_ui/: app.md  index.md
docs/api/midi/: base_manager.md  index.md  input_manager.md  manager.md  output_manager.md
docs/api/model_manager/: index.md  observer.md  persistence.md  protocols.md  service.md
docs/api/models/: color.md  config.md  enums.md  index.md  launchpad.md  pad.md  sample.md  set.md
docs/api/orchestration/: index.md  orchestrator.md
docs/api/protocols/: events.md  index.md  observers.md
docs/api/services/: config_service.md  editor_service.md  index.md  set_manager_service.md
docs/api/tui/: app.md  decorators.md  index.md
docs/api/ui_shared/: adapter.md  colors.md  index.md
docs/api/utils/: audio.md  error_handler.md  index.md  observer_manager.md  paths.md  persistence.md
docs/architecture/: overview.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
docs/user-guide/: overview.md
examples/: README.md  basic_playback.py  midi_playback.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
license/: index.html
scripts/: api_docs_config.yml  generate_api_docs.py
search/: search_index.json
src/launchsampler/: __init__.py  __main__.py  app.py  exceptions.py  protocols.py  ui_colors.py
tests/: README.md  conftest.py  test_app_integration.py  test_audio_data.py  test_audio_device.py  test_audio_manager.py  test_cli_smoke.py  test_config_service.py  test_device_detection.py  test_e2e_playback.py  test_editor_service.py  test_launchpad_input.py  test_launchpad_manager.py  test_launchpad_mapper.py  test_launchpad_mk3_mapper.py  test_launchpad_model.py  test_launchpad_output.py  test_launchpad_sysex.py  test_midi_controller.py  test_model_manager_service.py  test_models.py  test_navigation_service.py  test_persistence_safety.py  test_player.py  test_sampler_engine_queue.py  test_set_manager_service.py  test_spotify.py  test_state_machine.py  test_tui_service.py  test_tui_service_comprehensive.py  test_tui_smoke.py  test_utils.py
troubleshooting/: index.html
user-guide/overview/: index.html
(+170 files in other folders)
