[project]
name = "launchsampler"
version = "0.1.0"
description = "Simple Launchpad Sampler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "mido>=1.3.3",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.0",
    "textual>=1.0.0",
]

[project.scripts]
launchsampler = "launchsampler.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
