[project]
name = "launchsampler"
version = "0.1.0"
description = "Simple Launchpad Sampler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "mido>=1.3.3",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.0",
    "textual>=1.0.0",
]

[project.scripts]
launchsampler = "launchsampler.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-click>=0.9.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=launchsampler",
]

[tool.coverage.run]
source = ["launchsampler"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used in tests
